force-app/main/default/objects/Lead/fields/ABHFL_Employee_Number_Owner__c.field-meta.xml
<CustomField>
    <fullName>ABHFL_Employee_Number_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABHFL Employee Number Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>