force-app/main/default/objects/Lead/fields/ABHFL_Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>ABHFL_Prospect_Type__c</fullName>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Non Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>