force-app/main/default/objects/Lead/fields/ABSLI_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>ABSLI_Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Service to Sales</fullName>
            </value>
            <value>
                <fullName>Service to Sales- NBO</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Send an Advisor</fullName>
            </value>
            <value>
                <fullName>HDFC Win back</fullName>
            </value>
            <value>
                <fullName>D2C Winback</fullName>
            </value>
            <value>
                <fullName>Agency Winback</fullName>
            </value>
            <value>
                <fullName>Service Assurance S2S</fullName>
            </value>
            <value>
                <fullName>DCB Win Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>