force-app/main/default/objects/Lead/fields/API_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>API_Error_Code__c</fullName>
    <label>API Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>