force-app/main/default/objects/Lead/fields/API_Error_Fields__c.field-meta.xml
<CustomField>
    <fullName>API_Error_Fields__c</fullName>
    <label>API Error Fields</label>
    <type>TextArea</type>
</CustomField>