force-app/main/default/objects/Lead/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>ABSLI - This field value is coming from D2C Integration response.</description>
    <label>Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>