force-app/main/default/objects/Lead/fields/Auto_Won_Update_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Auto_Won_Update_Datetime__c</fullName>
    <label>Auto-Won Update Datetime</label>
    <type>DateTime</type>
</CustomField>