force-app/main/default/objects/Lead/fields/Call_Track_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Track_ID__c</fullName>
    <label>Call Track ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>