force-app/main/default/objects/Lead/fields/Comments_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Comments_Remarks__c</fullName>
    <label>Comments/Remarks</label>
    <type>TextArea</type>
</CustomField>