force-app/main/default/objects/Lead/fields/Create_Lead_To_CRM_Status__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead_To_CRM_Status__c</fullName>
    <label>Create Lead To CRM Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>