force-app/main/default/objects/Lead/fields/CreatedDateOnly__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateOnly__c</fullName>
    <formula>TEXT(DATEVALUE(CreatedDate))</formula>
    <label>CreatedDateOnly</label>
    <type>Text</type>
</CustomField>