force-app/main/default/objects/Lead/fields/Customer_ok_for_call_out__c.field-meta.xml
<CustomField>
    <fullName>Customer_ok_for_call_out__c</fullName>
    <label>Customer ok for call out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>