force-app/main/default/objects/Lead/fields/Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Date__c</fullName>
    <label>Disbursement Date</label>
    <type>DateTime</type>
</CustomField>