force-app/main/default/objects/Lead/fields/Distributer_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributer_Name__c</fullName>
    <label>Distributer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>