force-app/main/default/objects/Lead/fields/Distributor_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distributor Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>