force-app/main/default/objects/Lead/fields/Employee_ADID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ADID__c</fullName>
    <formula>CreatedBy.FederationIdentifier</formula>
    <label>Employee ADID</label>
    <type>Text</type>
</CustomField>