force-app/main/default/objects/Lead/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <formula>Employee_Name_LK__r.Email</formula>
    <label>Employee Email</label>
    <type>Text</type>
</CustomField>