force-app/main/default/objects/Lead/fields/Employee_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email_Text__c</fullName>
    <label>Employee Email ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>