force-app/main/default/objects/Lead/fields/Employee_LOB__c.field-meta.xml
<CustomField>
    <fullName>Employee_LOB__c</fullName>
    <label>Employee LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABSLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>