force-app/main/default/objects/Lead/fields/Employee_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_Text__c</fullName>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>