force-app/main/default/objects/Lead/fields/Employee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone__c</fullName>
    <formula>Employee_Name_LK__r.MobilePhone</formula>
    <label>Employee Phone</label>
    <type>Text</type>
</CustomField>