force-app/main/default/objects/Lead/fields/Employee_Phone_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone_Text__c</fullName>
    <label>Employee Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>