force-app/main/default/objects/Lead/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>SENP</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>