force-app/main/default/objects/Lead/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>