force-app/main/default/objects/Lead/fields/Expected_Premium__c.field-meta.xml
<CustomField>
    <fullName>Expected_Premium__c</fullName>
    <label>Expected Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>