force-app/main/default/objects/Lead/fields/External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_ID__c</fullName>
    <displayFormat>SFL-{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>External Lead ID</label>
    <type>AutoNumber</type>
</CustomField>