force-app/main/default/objects/Lead/fields/Folio_for_existing_customer__c.field-meta.xml
<CustomField>
    <fullName>Folio_for_existing_customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Folio for Existing Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select a folio associated with the current account</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Asset.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>