force-app/main/default/objects/Lead/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABHI</fullName>
            </value>
            <value>
                <fullName>ABML</fullName>
            </value>
            <value>
                <fullName>ABSLAMC</fullName>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>DigiGold</fullName>
            </value>
            <value>
                <fullName>Forex</fullName>
            </value>
            <value>
                <fullName>Gold Loan</fullName>
            </value>
            <value>
                <fullName>Motor Insurance</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>