force-app/main/default/objects/Lead/fields/GeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>GeocodeAccuracy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GeocodeAccuracy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>