force-app/main/default/objects/Lead/fields/Is_Conversion_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Is_Conversion_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Conversion Tracked?</label>
    <type>Checkbox</type>
</CustomField>