force-app/main/default/objects/Lead/fields/Is_Property_Identified__c.field-meta.xml
<CustomField>
    <fullName>Is_Property_Identified__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Property Identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>