force-app/main/default/objects/Lead/fields/LAT__c.field-meta.xml
<CustomField>
    <fullName>LAT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>