force-app/main/default/objects/Lead/fields/Lead_Status_Change_date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Change_date__c</fullName>
    <label>Lead Status Change date</label>
    <type>DateTime</type>
</CustomField>