force-app/main/default/objects/Lead/fields/Lead_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Stage__c</fullName>
    <label>Lead Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Different Product</fullName>
            </value>
            <value>
                <fullName>Non-Serviceable</fullName>
            </value>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Met Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Opted Competitors Product</fullName>
            </value>
            <value>
                <fullName>Plan to Invest Later</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Wrong No.</fullName>
            </value>
            <value>
                <fullName>Funds Not Available</fullName>
            </value>
            <value>
                <fullName>Hung Up</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Looking For Job</fullName>
            </value>
            <value>
                <fullName>Medical Unfit</fullName>
            </value>
            <value>
                <fullName>Met Not Interested</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Call Disconnected</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Met Follow Up</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>Application Logged</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>