force-app/main/default/objects/Lead/fields/Lead_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subtype__c</fullName>
    <label>Lead Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity - TRO SIP Expiry</fullName>
            </value>
            <value>
                <fullName>Activity - TRO Cheque Bounce</fullName>
            </value>
            <value>
                <fullName>Activity - TRO Purchase</fullName>
            </value>
            <value>
                <fullName>Activity - TRO Systematic Transaction</fullName>
            </value>
            <value>
                <fullName>Activity - Distributor Interested To Get Empanelled</fullName>
            </value>
            <value>
                <fullName>Activity - Client Interested To Invest</fullName>
            </value>
            <value>
                <fullName>Activity - POST- Redemption Saved by SRM</fullName>
            </value>
            <value>
                <fullName>Activity - PRE-Redemption Saved by SRM</fullName>
            </value>
            <value>
                <fullName>Activity - Redemption Saved by Sales RM</fullName>
            </value>
            <value>
                <fullName>Activity - SIP Cancellation Saved Winback</fullName>
            </value>
            <value>
                <fullName>Activity - Lead Prospect</fullName>
            </value>
            <value>
                <fullName>Activity - Lead Existing</fullName>
            </value>
            <value>
                <fullName>Activity - Lead Referral</fullName>
            </value>
            <value>
                <fullName>Activity - Lead NFO</fullName>
            </value>
            <value>
                <fullName>Activity - Lead Campaign</fullName>
            </value>
            <value>
                <fullName>Activity - Lead Dormant</fullName>
            </value>
            <value>
                <fullName>Activity - Lead Zero Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>