force-app/main/default/objects/Lead/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <length>20</length>
    <type>Text</type>
</CustomField>