force-app/main/default/objects/Lead/fields/LOB_Presence__c.field-meta.xml
<CustomField>
    <fullName>LOB_Presence__c</fullName>
    <label>LOB Presence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>