force-app/main/default/objects/Lead/fields/LOG__c.field-meta.xml
<CustomField>
    <fullName>LOG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LOG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>