force-app/main/default/objects/Lead/fields/Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Login_Date__c</fullName>
    <label>Login Date</label>
    <type>DateTime</type>
</CustomField>