force-app/main/default/objects/Lead/fields/ONEABC_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>ONEABC_Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Consult Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>