force-app/main/default/objects/Lead/fields/Overall_Conversion_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overall_Conversion_Amount__c</fullName>
    <label>Overall Conversion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>