force-app/main/default/objects/Lead/fields/PANNO__c.field-meta.xml
<CustomField>
    <fullName>PANNO__c</fullName>
    <label>PANNO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>