force-app/main/default/objects/Lead/fields/PEKRN__c.field-meta.xml
<CustomField>
    <fullName>PEKRN__c</fullName>
    <label>PEKRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>