force-app/main/default/objects/Lead/fields/Policy_Channel__c.field-meta.xml
<CustomField>
    <fullName>Policy_Channel__c</fullName>
    <formula>Asset__r.Channel__c</formula>
    <label>Policy Channel</label>
    <type>Text</type>
</CustomField>