force-app/main/default/objects/Lead/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <type>TextArea</type>
</CustomField>