force-app/main/default/objects/Lead/fields/Preferred_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication__c</fullName>
    <label>Preferred Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>