force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMMERCIAL PROPERTY PURCHASE_AHF</fullName>
            </value>
            <value>
                <fullName>CPP_PRIME</fullName>
            </value>
            <value>
                <fullName>HOME LOAN</fullName>
            </value>
            <value>
                <fullName>HOME LOAN_AHF</fullName>
            </value>
            <value>
                <fullName>HOME LOAN_INFORMAL</fullName>
            </value>
            <value>
                <fullName>HOME LOAN_PLUS</fullName>
            </value>
            <value>
                <fullName>LAP_AHF</fullName>
            </value>
            <value>
                <fullName>LEASE RENTAL DISCOUNTING</fullName>
            </value>
            <value>
                <fullName>LEASE RENTAL DISCOUNTING_INST</fullName>
            </value>
            <value>
                <fullName>LOAN AGAINST PROPERTY</fullName>
            </value>
            <value>
                <fullName>LOAN AGAINST PROPERTY_INFORMAL</fullName>
            </value>
            <value>
                <fullName>MICRO CONSTRUCTION FINANCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>