force-app/main/default/objects/Lead/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Function__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Insta PL</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Lease Rental Discounting</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Super top</fullName>
            </value>
            <value>
                <fullName>Pocket Insurance</fullName>
            </value>
            <value>
                <fullName>Travel Insurance</fullName>
            </value>
            <value>
                <fullName>Demat</fullName>
            </value>
            <value>
                <fullName>Stocks SIP</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>EQUITY</fullName>
            </value>
            <value>
                <fullName>FOF</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
            <value>
                <fullName>ULIP</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Fixed Deposits</fullName>
            </value>
            <value>
                <fullName>DigiGold</fullName>
            </value>
            <value>
                <fullName>Currency, Card &amp; Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Gold Loan</fullName>
            </value>
            <value>
                <fullName>Two wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>