force-app/main/default/objects/Lead/fields/Product_LK__c.field-meta.xml
<CustomField>
    <fullName>Product_LK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.Business_Unit__c</field>
            <operation>equals</operation>
            <valueField>$User.Business_Unit__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product2.Business_Unit__c</field>
            <operation>equals</operation>
            <valueField>$Source.Business_Unit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>